--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -88,11 +88,11 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title MD</th>
+      <th style="width: 35%">Title MD</th>
       <th style="width: 15%">Price</th>
       <th style="width:  5%">Qnt</th>
       <th style="width:  5%">Expiration</th>
-      <th style="width: 35%"></th>
+      <th style="width: 40%"></th>
     </tr>
     </thead>
 
@@ -103,7 +103,7 @@
       <td>{{formatPrice(coupon.price)}}</td>
       <td>{{coupon.quantity}}</td>
       <td>{{coupon.valid_until === null? 'Unlimited': formatUntil(coupon.valid_until) }}</td>
-      <td>
+      <td class="px-0 text-center">
         <button class="btn btn-secondary" (click)="changeQuantity(coupon, false)" [disabled]="coupon.quantity === 1">
           <i class="fas fa-minus text-white"></i>
         </button>
@@ -162,12 +162,12 @@
   <div *ngIf="cart.length > 0">
     <div *ngFor="let coupon of coupons">
       <div style="background-color: snow" class="card flex-row flex-wrap">
-        <div style="background-color:snow" class="card-header border-0 col-4">
-          <img class="crop-cart centered-and-cropped-cart" [src]="imageUrl(coupon.image)" alt="">
+        <div style="background-color:snow" class="card-header border-0 col-sm-4 col-5">
+          <img class="img-fluid" [src]="imageUrl(coupon.image)" alt="">
         </div>
-        <div class="col-8" style="padding-bottom: 1em; padding-top: 1em">
-          <h5 class="card-text truncate ">{{coupon.title}}</h5>
-          <p class="card-text truncate ">{{coupon.description}}</p>
+        <div class="col-sm-8 col-7" style="padding-bottom: 1em; padding-top: 1em">
+          <h5 class="card-text">{{coupon.title}}</h5>
+          <p class="card-text">{{coupon.description}}</p>
           <div style="float: right">
             <a href="#">
               <button type="button" class="btn btn-outline-dark" (click)="details(coupon)"><i
