--- a/src/app/features/reserved-area/consumer/cart/cart.component.scss
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.scss
@@ -21,3 +21,10 @@
   padding-left: 5px!important;
   padding-right: 5px!important;
 }
+
+@media only screen and (min-width: 678px) and (max-width: 991px) {
+  td > .btn {
+    padding: 3px 5px;
+    margin-right: 5px;
+  }
+}
