--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -29,11 +29,8 @@ body {
   top: 56px;
 }
 
-#main-content .container-fluid {
+#main-content > .container-fluid {
   margin-bottom: 60px;
-}
-
-#main-content .container-fluid {
   min-height: calc(100% - 56px - 54px);
 }
 
@@ -62,7 +59,7 @@ app-core-sidebar {
     padding: 0 28px 40px 28px;
   }
 
-  #main-content .container-fluid {
+  #main-content > .container-fluid {
     margin-bottom: 0;
     margin-top: 5em;
   }
