--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -49,7 +49,7 @@
                           class="menu-collapsed">My purchases</span>
                   </a>
                   <a class="list-group-item list-group-item-action padding-left-sidebar-mobile-item ">
-                    <span (click)="clickEvent('/reserved-area/consumer/coupon-import')" class="menu-collapsed">Get Coupon by Token</span>
+                    <span (click)="clickEvent('/reserved-area/consumer/coupon-import')" class="menu-collapsed">Import Coupon</span>
                   </a>
                 </div>
 
