--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <!--<div style="padding-top: 20%" *ngIf="!hide || desktopMode " >-->
-<div class="padding-header" *ngIf="desktopMode " >
+<div class="padding-header" *ngIf="desktopMode " > <!-- TODO to move to features the desktopMode -->
   <div  id="sidebar-container"  class="sidebar-expanded  col-1-5 " *ngIf="isUserLoggedIn">
 
     <ul class="list-group sticky-top sticky-offset">
@@ -7,7 +7,7 @@
         <small class="font-weight-bold">MENU</small>
       </li>
 
-      <a   aria-expanded="false"
+      <a aria-expanded="false"
          class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-start align-items-center">
           <span class="fas fa-archway mr-3"></span>
@@ -38,7 +38,7 @@
             <span (click)="hideSideBar(!hide)" class="menu-collapsed">My purchases</span>
           </a>
           <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action text-white">
-            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Get Coupon by Token</span>
+            <span (click)="hideSideBar(!hide)" class="menu-collapsed">Import Coupon</span>
           </a>
         </div>
 
