--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -1,11 +1,10 @@
 <app-core-header></app-core-header>
 <div class="row" id="body-row">
-  <app-core-sidebar><!-- >-->
-  </app-core-sidebar>
+  <app-core-sidebar *ngIf="desktopMode"></app-core-sidebar>
 
-  <div class="col px-0" id="main-content">
+  <div class="px-0" id="main-content">
     <app-core-breadcrumb ></app-core-breadcrumb>
-    <div  class="container-fluid" id="main-container">
+    <div id="main-container"> <!-- levato container-fluid -->
       <router-outlet></router-outlet>
     </div>
 
