--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,18 +1,13 @@
 // TODO Refactor
 
+body, html {
+  height: 100%;
+}
+
 .alert-registration {
   position: fixed;
   bottom: 70px;
   right: 10px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: auto;
-  line-height: 60px;
-  background-color: white;
 }
 
 .nav-item .nav-link > .img-avatar, .nav-item .avatar.nav-link > img {
@@ -21,7 +16,6 @@
 }
 
 body {
-  padding-top: 56px;
   background-color: #f1f2f3!important;
 }
 
@@ -37,31 +31,40 @@ body {
 #body-row {
   margin-left: 0;
   margin-right: 0;
+  margin-top: 56px;
 }
 
 app-core-sidebar {
   min-height: calc(100vh - 56px);
   background-color: #2f353a;
   padding: 0;
+  width: 230px;
+  position: fixed;
 }
 
 #main-content {
   min-height: calc(100vh - 56px);
+  min-width: calc(100% - 230px);
+  margin-left: 230px;
+  display: flex;
+  flex-direction: column;
 }
 
 #main-container {
   padding: 9px 28px;
+  margin-top: 50px;
+  flex: 1 0 auto;
 }
 
 @media only screen and (max-width: 768px) {
-  #main-container {
-    /* padding: 40px 28px; tb/rl*/
-    padding: 0 28px 40px 28px;
+  #main-content {
+    margin-left: 0;
   }
 
-  #main-content > .container-fluid {
-    margin-bottom: 0;
-    margin-top: 5em;
+  #main-container {
+    margin-top: 23px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
@@ -271,12 +274,4 @@ table {
 
 .btn-info{
   //background-color: black;
-}
-
-
-@media screen and (min-width: 768px) {
-  #main-container {
-
-    margin-top: 5em;
-  }
 }
