--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="row">
   <div style="margin-bottom: 2em" class="col-lg-6 col-xl-4 col-md-6 col col-sm-6 col-12" *ngFor="let coupon of coupons">
     <div  class="card ">
