--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
@@ -8,10 +8,13 @@
   object-fit: cover
 }
 
+table {
+  margin-bottom: 0;
+}
+
 p {
   display: block;
   max-width: 400px;
-  /*height: 109.2px;*/
   margin: 0 auto;
   line-height: 1.4;
   -webkit-line-clamp: 3;
@@ -19,10 +22,8 @@ p {
 }
 
 h5 {
-  /*display: block; !* Fallback for non-webkit *!*/
   display: -webkit-box;
   max-width: 400px;
-  /*height: 90px; !* Fallback for non-webkit *!*/
   margin: 0 auto;
   line-height: 1.4;
   -webkit-line-clamp: 3;
@@ -64,4 +65,11 @@ h5 {
 
 .card-header.col-4.border-0.pr-0 {
   padding-left: 15px;
+}
+
+@media only screen and (max-width: 767px) {
+  p {
+    max-width: 100%;
+    margin: 0;
+  }
 }
