--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -1,4 +1,4 @@
-<div class="d-none d-md-none d-xl-block">
+<div class="container-fluid d-none d-md-none d-xl-block">
   <table class="table table-striped">
     <thead>
     <tr>
@@ -46,7 +46,7 @@
     </tbody>
   </table>
 </div> <!-- XL TABLE -->
-<div class="d-none d-md-none d-lg-block d-xl-none">
+<div class="container-fluid d-none d-md-none d-lg-block d-xl-none">
   <table class="table table-striped">
     <thead>
     <tr>
@@ -96,7 +96,7 @@
     </tbody>
   </table>
 </div> <!-- LG TABLE -->
-<div class="d-none d-md-block d-lg-none">
+<div class="container-fluid d-none d-md-block d-lg-none">
   <table class="table table-striped">
     <thead>
     <tr>
@@ -143,7 +143,7 @@
     </tbody>
   </table>
 </div> <!-- MD TABLE -->
-<div class="d-block d-md-none mb-5">
+<div class="container-fluid d-block d-md-none mb-5">
   <div *ngIf="couponArray && couponArray.length > 0">
     <div *ngFor="let coupon of couponArray" style="background-color: snow" class="card flex-row flex-wrap">
       <div style="background-color:snow" class="card-header col-4 border-0 pr-0">
