--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -24,7 +24,6 @@ body {
 }
 
 #main-content > .container-fluid {
-  margin-bottom: 60px;
   min-height: calc(100% - 56px - 54px);
 }
 
@@ -48,23 +47,22 @@ app-core-sidebar {
   margin-left: 230px;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 #main-container {
-  padding: 9px 28px;
+  padding: 15px 0; /*9px 28px; */
   margin-top: 50px;
   flex: 1 0 auto;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   #main-content {
     margin-left: 0;
   }
 
   #main-container {
-    margin-top: 23px;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin-top: 27px;
   }
 }
 
